[tool.poetry]
name = "fastaip-meduzzen"
version = "0.1.0"
description = ""
authors = ["artem <artem.serdechnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
anyio = {extras = ["trio"], version = "^4.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
