[tool.poetry]
name = "fastaip-meduzzen"
version = "0.1.0"
description = ""
authors = ["artem <artem.serdechnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
anyio = {extras = ["trio"], version = "^4.3.0"}
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
redis = "^5.0.3"
ruff = "^0.3.7"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
pytest-asyncio = "^0.23.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
coverage = "^7.5.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode="auto"
